--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "scripts": {
     "predev": "node ./scripts/copy-pdf-worker.js",
-    "dev": "next dev --turbopack",
+    "dev": "next dev",
+    "dev:turbo": "next dev --turbopack",
     "prebuild": "node ./scripts/copy-pdf-worker.js",
     "build": "next build",
     "start": "next start",
@@ -16,7 +17,6 @@
     "next": "15.3.2",
     "next-intl": "^4.1.0",
     "pdfjs-dist": "^5.2.133",
-    "postcss": "^8.5.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-pdf": "^9.2.1"
@@ -29,9 +29,13 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "@types/webpack": "^5.28.5",
+    "autoprefixer": "^10.4.18",
     "eslint": "^9",
     "eslint-config-next": "15.3.2",
-    "tailwindcss": "^4.1.8",
+    "lightningcss": "^1.30.1",
+    "lightningcss-cli": "^1.30.1",
+    "postcss": "^8.4.35",
+    "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
 }
