--- a/package.json
+++ b/package.json
@@ -14,28 +14,43 @@
   "dependencies": {
     "@fontsource/cairo": "^5.2.5",
     "@fontsource/roboto": "^5.2.5",
+    "@next/bundle-analyzer": "^15.3.3",
     "next": "15.3.2",
     "next-intl": "^4.1.0",
+    "next-pwa": "^5.6.0",
     "pdfjs-dist": "4.8.69",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-pdf": "^9.2.1"
+    "react-pdf": "^9.2.1",
+    "web-vitals": "^5.0.2",
+    "webpack-bundle-analyzer": "^4.10.2"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4.1.8",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.3.0",
     "@types/node": "^20",
     "@types/pdfjs-dist": "^2.10.378",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "@types/webpack": "^5.28.5",
+    "@typescript-eslint/eslint-plugin": "^8.33.0",
+    "@typescript-eslint/parser": "^8.33.0",
     "autoprefixer": "^10.4.18",
     "eslint": "^9",
     "eslint-config-next": "15.3.2",
+    "eslint-plugin-import": "^2.31.0",
+    "eslint-plugin-jsx-a11y": "^6.10.2",
+    "eslint-plugin-react": "^7.37.5",
+    "eslint-plugin-react-hooks": "^5.2.0",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^30.0.0-beta.3",
     "lightningcss": "^1.30.1",
     "lightningcss-cli": "^1.30.1",
     "postcss": "^8.4.35",
     "tailwindcss": "^3.4.1",
+    "ts-jest": "^29.3.4",
     "typescript": "^5"
   }
 }
