--- a/package.json
+++ b/package.json
@@ -8,6 +8,13 @@
     "build": "npm run copy-worker && next build",
     "start": "next start",
     "lint": "next lint",
+    "lint:fix": "next lint --fix",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
+    "test:ci": "jest --ci --coverage --watchAll=false",
+    "type-check": "tsc --noEmit",
+    "analyze": "ANALYZE=true npm run build",
     "copy-worker": "node scripts/copy-pdf-worker.js",
     "postinstall": "npm run copy-worker"
   },
@@ -30,6 +37,7 @@
     "@tailwindcss/postcss": "^4.1.8",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
+    "@testing-library/user-event": "^14.6.1",
     "@types/node": "^20",
     "@types/pdfjs-dist": "^2.10.378",
     "@types/react": "^19",
@@ -39,7 +47,7 @@
     "@typescript-eslint/parser": "^8.33.0",
     "autoprefixer": "^10.4.18",
     "eslint": "^9",
-    "eslint-config-next": "15.3.2",
+    "eslint-config-next": "^15.3.2",
     "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-jsx-a11y": "^6.10.2",
     "eslint-plugin-react": "^7.37.5",
