--- a/package.json
+++ b/package.json
@@ -9,13 +9,9 @@
     "start": "next start",
     "lint": "next lint",
     "lint:fix": "next lint --fix",
-    "test": "jest",
-    "test:watch": "jest --watch",
-    "test:coverage": "jest --coverage",
-    "test:ci": "jest --ci --coverage --watchAll=false",
     "type-check": "tsc --noEmit",
     "analyze": "ANALYZE=true npm run build",
-    "copy-worker": "node scripts/copy-pdf-worker.js",
+    "copy-worker": "node -p \"const fs=require('fs'),path=require('path');try{const src=path.join('node_modules','pdfjs-dist','build','pdf.worker.min.mjs'),dest='public/pdf-worker';fs.mkdirSync(dest,{recursive:true});fs.copyFileSync(src,path.join(dest,'pdf.worker.min.mjs'));'✅ PDF worker copied'}catch{try{const src=path.join('node_modules','pdfjs-dist','build','pdf.worker.js'),dest='public/pdf-worker';fs.copyFileSync(src,path.join(dest,'pdf.worker.js'));'✅ PDF worker (js) copied'}catch{'⚠️ PDF worker copy skipped'}}\"",
     "postinstall": "npm run copy-worker"
   },
   "dependencies": {
@@ -28,6 +24,8 @@
     "pdfjs-dist": "4.8.69",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hot-toast": "^2.5.2",
+    "react-intersection-observer": "^9.16.0",
     "react-pdf": "^9.2.1",
     "web-vitals": "^5.0.2",
     "webpack-bundle-analyzer": "^4.10.2"
@@ -35,9 +33,9 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4.1.8",
-    "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^14.6.1",
+    "@types/next-pwa": "^5.6.9",
     "@types/node": "^20",
     "@types/pdfjs-dist": "^2.10.378",
     "@types/react": "^19",
@@ -46,19 +44,17 @@
     "@typescript-eslint/eslint-plugin": "^8.33.0",
     "@typescript-eslint/parser": "^8.33.0",
     "autoprefixer": "^10.4.18",
+    "critters": "^0.0.25",
     "eslint": "^9",
     "eslint-config-next": "^15.3.2",
     "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-jsx-a11y": "^6.10.2",
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^5.2.0",
-    "jest": "^29.7.0",
-    "jest-environment-jsdom": "^30.0.0-beta.3",
     "lightningcss": "^1.30.1",
     "lightningcss-cli": "^1.30.1",
     "postcss": "^8.4.35",
     "tailwindcss": "^3.4.1",
-    "ts-jest": "^29.3.4",
     "typescript": "^5"
   }
 }
