--- a/tsconfig.json
+++ b/tsconfig.json
@@ -44,7 +44,7 @@
       "@/hooks/*": ["./hooks/*"]
     },
     "baseUrl": ".",
-    "types": ["node", "jest", "@testing-library/jest-dom"]
+    "types": ["node"]
   },
   "include": [
     "next-env.d.ts", 
