--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-hot-toast": "^2.5.2",
     "react-intersection-observer": "^9.16.0",
     "react-pdf": "^9.2.1",
+    "react-simple-wysiwyg": "^3.2.2",
     "web-vitals": "^5.0.2",
     "webpack-bundle-analyzer": "^4.10.2"
   },
